style/section/speakers.styl
#speakers
    section-color(#263e44)
    text-align center

    ul.speakers-list
        debullet()

        .col-3
            float none
            display inline-block

        .row
            margin 50px 0
            
            &:last-child
                margin-bottom 0

        .avatar
            border-radius(100%)
            width 150px
            height @width
            background rgba(color-black, .2)
            margin-bottom 20px
            mix-blend-mode luminosity

            &:hover
                mix-blend-mode normal
                

        h4
            margin-bottom 5px
            opacity 1

        h5
            font-weight normal
            margin-bottom 10px

        p
            margin-bottom 10px

        .twitter-handle
            color color-twitter
            font-size type-size-small
            font-weight bold

        @media (max-width: mobile-breakpoint)

            li
                margin-bottom 50px

                &:last-child
                    margin-bottom 0

